# ARMS

./: .gitignore  CMakeLists.txt  README.md
inc/: arms_math.h  audioray.h  barrier.h  button.h  colors.h  filter.h  generator.h  helper.h  listener2.h  object.h  parsedata.h  scene.h  source.h  text.h  textbox.h  unittests.h  wave.h
input/: testscene1.txt  testscene2.txt  testscene3.txt
src/: arms_math.cpp  audioray.cpp  barrier.cpp  button.cpp  filter.cpp  generator.cpp  listener2.cpp  main.cpp  object.cpp  parsedata.cpp  scene.cpp  source.cpp  text.cpp  textbox.cpp  wave.cpp
